src/variable_versions/snapshots/netflow_parser__variable_versions__v9_lookup__v9_lookup_tests__it_tests_field_data_type_lookup.snap
---
source: src/variable_versions/v9_lookup.rs
expression: fields
---
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- ProtocolType
- UnsignedDataNumber
- TcpControlBits
- UnsignedDataNumber
- Ip4Addr
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- Ip4Addr
- UnsignedDataNumber
- UnsignedDataNumber
- Ip4Addr
- UnsignedDataNumber
- UnsignedDataNumber
- Ip4Addr
- UnsignedDataNumber
- UnsignedDataNumber
- DurationMillis
- DurationMillis
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- Ip6Addr
- Ip6Addr
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- Unknown
- Ip4Addr
- Ip4Addr
- UnsignedDataNumber
- Ip4Addr
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- Unknown
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- MacAddr
- MacAddr
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- Ip6Addr
- Ip6Addr
- Ipv6ExtensionHeaders
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- MacAddr
- MacAddr
- String
- String
- String
- UnsignedDataNumber
- UnsignedDataNumber
- Unknown
- UnsignedDataNumber
- ForwardingStatus
- Vec
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- String
- Vec
- String
- Unknown
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- Unknown
- UnsignedDataNumber
- UnsignedDataNumber
- Vec
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- UnsignedDataNumber
- UnsignedDataNumber
- Ip4Addr
- Ip6Addr
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- FlowEndReason
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- Ip6Addr
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- String
- UnsignedDataNumber
- UnsignedDataNumber
- DurationSeconds
- DurationSeconds
- DurationMillis
- DurationMillis
- DurationMicrosNTP
- DurationMicrosNTP
- DurationNanosNTP
- DurationNanosNTP
- UnsignedDataNumber
- UnsignedDataNumber
- DurationMillis
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- Ip6Addr
- Ip6Addr
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- UnsignedDataNumber
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Ip4Addr
- Ip4Addr
- UnsignedDataNumber
- UnsignedDataNumber
- Unknown
- NatEvent
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Ip6Addr
- Ip6Addr
