src/variable_versions/snapshots/netflow_parser__variable_versions__v9_lookup__v9_lookup_tests__it_tests_field_lookup.snap
---
source: src/variable_versions/v9_lookup.rs
expression: fields
---
- InBytes
- InPkts
- Flows
- Protocol
- SrcTos
- TcpFlags
- L4SrcPort
- Ipv4SrcAddr
- SrcMask
- InputSnmp
- L4DstPort
- Ipv4DstAddr
- DstMask
- OutputSnmp
- Ipv4NextHop
- SrcAs
- DstAs
- BgpIpv4NextHop
- MulDstPkts
- MulDstBytes
- LastSwitched
- FirstSwitched
- OutBytes
- OutPkts
- MinPktLngth
- MaxPktLngth
- Ipv6SrcAddr
- Ipv6DstAddr
- Ipv6SrcMask
- Ipv6DstMask
- Ipv6FlowLabel
- IcmpType
- MulIgmpType
- SamplingInterval
- SamplingAlgorithm
- FlowActiveTimeout
- FlowInactiveTimeout
- EngineType
- EngineId
- TotalBytesExp
- TotalPktsExp
- TotalFlowsExp
- IanaAssigned: 43
- Ipv4SrcPrefix
- Ipv4DstPrefix
- MplsTopLabelType
- MplsTopLabelIpAddr
- FlowSamplerId
- FlowSamplerMode
- FlowSamplerRandomInterval
- IanaAssigned: 51
- MinTtl
- MaxTtl
- Ipv4Ident
- DstTos
- InSrcMac
- OutDstMac
- SrcVlan
- DstVlan
- IpProtocolVersion
- Direction
- Ipv6NextHop
- BgpIpv6NextHop
- Ipv6OptionHeaders
- IanaAssigned: 65
- IanaAssigned: 66
- IanaAssigned: 67
- IanaAssigned: 68
- IanaAssigned: 69
- MplsLabel1
- MplsLabel2
- MplsLabel3
- MplsLabel4
- MplsLabel5
- MplsLabel6
- MplsLabel7
- MplsLabel8
- MplsLabel9
- MplsLabel10
- InDstMac
- OutSrcMac
- IfName
- IfDesc
- SamplerName
- InPermanentBytes
- InPermanentPkts
- IanaAssigned: 87
- FragmentOffset
- ForwardingStatus
- MplsPalRd
- MplsPrefixLen
- SrcTrafficIndex
- DstTrafficIndex
- ApplicationDescription
- ApplicationTag
- ApplicationName
- Unknown: 97
- PostipDiffServCodePoint
- Replicationfactor
- Deprecated
- Unknown: 101
- Layer2packetSectionOffset
- Layer2packetSectionSize
- Layer2packetSectionData
- Unknown: 105
- Unknown: 106
- Unknown: 107
- Unknown: 108
- Unknown: 109
- Unknown: 110
- Unknown: 111
- Unknown: 112
- Unknown: 113
- Unknown: 114
- Unknown: 115
- Unknown: 116
- Unknown: 117
- Unknown: 118
- Unknown: 119
- Unknown: 120
- Unknown: 121
- Unknown: 122
- Unknown: 123
- Unknown: 124
- Unknown: 125
- Unknown: 126
- Unknown: 127
- BgpNextAdjacentAsNumber
- BgpPrevAdjacentAsNumber
- ExporterIpv4Address
- ExporterIpv6Address
- DroppedOctetDeltaCount
- DroppedPacketDeltaCount
- DroppedOctetTotalCount
- DroppedPacketTotalCount
- FlowEndReason
- CommonPropertiesId
- ObservationPointId
- IcmpTypeCodeIpv6
- MplsTopLabelIpv6Address
- LineCardId
- PortId
- MeteringProcessId
- ExportingProcessId
- TemplateId
- WlanChannelId
- WlanSsid
- FlowId
- ObservationDomainId
- FlowStartSeconds
- FlowEndSeconds
- FlowStartMilliseconds
- FlowEndMilliseconds
- FlowStartMicroseconds
- FlowEndMicroseconds
- FlowStartNanoseconds
- FlowEndNanoseconds
- FlowStartDeltaMicroseconds
- FlowEndDeltaMicroseconds
- SystemInitTimeMilliseconds
- FlowDurationMilliseconds
- FlowDurationMicroseconds
- ObservedFlowTotalCount
- IgnoredPacketTotalCount
- IgnoredOctetTotalCount
- NotSentFlowTotalCount
- NotSentPacketTotalCount
- NotSentOctetTotalCount
- DestinationIpv6Prefix
- SourceIpv6Prefix
- PostOctetTotalCount
- PostPacketTotalCount
- FlowKeyIndicator
- PostMcastPacketTotalCount
- PostMcastOctetTotalCount
- IcmpTypeValue
- IcmpCodeValue
- IcmpIpv6TypeValue
- IcmpIpv6CodeValue
- Unknown: 180
- Unknown: 181
- Unknown: 182
- Unknown: 183
- Unknown: 184
- Unknown: 185
- Unknown: 186
- Unknown: 187
- Unknown: 188
- Unknown: 189
- Unknown: 190
- Unknown: 191
- Unknown: 192
- Unknown: 193
- Unknown: 194
- Unknown: 195
- Unknown: 196
- Unknown: 197
- Unknown: 198
- Unknown: 199
- Unknown: 200
- Unknown: 201
- Unknown: 202
- Unknown: 203
- Unknown: 204
- Unknown: 205
- Unknown: 206
- Unknown: 207
- Unknown: 208
- Unknown: 209
- Unknown: 210
- Unknown: 211
- Unknown: 212
- Unknown: 213
- Unknown: 214
- Unknown: 215
- Unknown: 216
- Unknown: 217
- Unknown: 218
- Unknown: 219
- Unknown: 220
- Unknown: 221
- Unknown: 222
- Unknown: 223
- Unknown: 224
- PostNATSourceIPv4Address
- PostNATDestinationIPv4Address
- PostNATTSourceTransportPort
- PostNATTDestinationTransportPort
- NatOriginatingAddressRealm
- NatEvent
- Unknown: 231
- Unknown: 232
- FirewallEvent
- IngressVRFID
- EgressVRFID
- Unknown: 236
- Unknown: 237
- Unknown: 238
- BiflowDirection
- Unknown: 240
- Unknown: 241
- Unknown: 242
- Unknown: 243
- Unknown: 244
- Unknown: 245
- Unknown: 246
- Unknown: 247
- Unknown: 248
- Unknown: 249
- Unknown: 250
- Unknown: 251
- Unknown: 252
- Unknown: 253
- Unknown: 254
- Unknown: 255
- Unknown: 256
- Unknown: 257
- Unknown: 258
- Unknown: 259
- Unknown: 260
- Unknown: 261
- Unknown: 262
- Unknown: 263
- Unknown: 264
- Unknown: 265
- Unknown: 266
- Unknown: 267
- Unknown: 268
- Unknown: 269
- Unknown: 270
- Unknown: 271
- Unknown: 272
- Unknown: 273
- Unknown: 274
- Unknown: 275
- Unknown: 276
- Unknown: 277
- Unknown: 278
- Unknown: 279
- Unknown: 280
- PostNATSourceIpv6Address
- PostNATDestinationIpv6Address
