src/variable_versions/snapshots/netflow_parser__variable_versions__v9_lookup__v9_lookup_tests__it_verified_field_lookup.snap
---
source: src/variable_versions/v9_lookup.rs
expression: fields
---
- InBytes
- InPkts
- Flows
- Protocol
- SrcTos
- TcpFlags
- L4SrcPort
- Ipv4SrcAddr
- SrcMask
- InputSnmp
- L4DstPort
- Ipv4DstAddr
- DstMask
- OutputSnmp
- Ipv4NextHop
- SrcAs
- DstAs
- BgpIpv4NextHop
- MulDstPkts
- MulDstBytes
- LastSwitched
- FirstSwitched
- OutBytes
- OutPkts
- MinPktLngth
- MaxPktLngth
- Ipv6SrcAddr
- Ipv6DstAddr
- Ipv6SrcMask
- Ipv6DstMask
- Ipv6FlowLabel
- IcmpType
- MulIgmpType
- SamplingInterval
- SamplingAlgorithm
- FlowActiveTimeout
- FlowInactiveTimeout
- EngineType
- EngineId
- TotalBytesExp
- TotalPktsExp
- TotalFlowsExp
- Vendor
- Ipv4SrcPrefix
- Ipv4DstPrefix
- MplsTopLabelType
- MplsTopLabelIpAddr
- FlowSamplerId
- FlowSamplerMode
- FlowSamplerRandomInterval
- Vendor
- MinTtl
- MaxTtl
- Ipv4Ident
- DstTos
- InSrcMac
- OutDstMac
- SrcVlan
- DstVlan
- IpProtocolVersion
- Direction
- Ipv6NextHop
- BpgIpv6NextHop
- Ipv6OptionHeaders
- Vendor
- Vendor
- Vendor
- Vendor
- Vendor
- MplsLabel1
- MplsLabel2
- MplsLabel3
- MplsLabel4
- MplsLabel5
- MplsLabel6
- MplsLabel7
- MplsLabel8
- MplsLabel9
- MplsLabel10
- InDstMac
- OutSrcMac
- IfName
- IfDesc
- SamplerName
- InPermanentBytes
- InPermanentPkts
- Vendor
- FragmentOffset
- ForwardingStatus
- MplsPalRd
- MplsPrefixLen
- SrcTrafficIndex
- DstTrafficIndex
- ApplicationDescription
- ApplicationTag
- ApplicationName
- Unknown
- PostipDiffServCodePoint
- Replicationfactor
- Deprecated
- Unknown
- Layer2packetSectionOffset
- Layer2packetSectionSize
- Layer2packetSectionData
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- IcmpTypeValue
- IcmpCodeValue
- IcmpIpv6TypeValue
- ImpIpv6CodeValue
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- PostNATSourceIPv4Address
- PostNATDestinationIPv4Address
- PostNATTSourceTransportPort
- PostNATTDestinationTransportPort
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- Unknown
- PostNATSourceIpv6Address
- PostNATDestinationIpv6Address
